compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__using_private_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub fn main() {\n  one.Two\n}"
---
----- SOURCE CODE
-- one.rakun
record Two { Two }

-- main.rakun
import one

pub fn main() {
  one.Two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:4:6
  │
4 │   one.Two
  │      ^^^^

The module `one` does not have a `Two` value.
